--- a/examples/index.html
+++ b/examples/index.html
@@ -26,20 +26,7 @@
 				transform:translateX(-50%) translateY(-50%);
 				position:absolute;
 			}
-			#ctxt span{
-				margin-top:75px;
-				margin-left:75px;
-				transform:translateX(-50%) translateY(-50%);
-				position:absolute;
-				/*-webkit-animation:rot2 2s infinite linear;*/
-				color:#fff;
-				font-size:75px;
-				font-family:Roboto;
-			}
-			@-webkit-keyframes rot2{
-				from{transform:translateX(-50%) translateY(-50%) rotate(0deg); }
-				to{transform:translateX(-50%) translateY(-50%) rotate(360deg); }
-			}
+			
 			@-webkit-keyframes rot{
 				from{transform:rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
 				to{transform:rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
@@ -49,7 +36,6 @@
 	<body>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' type='text/javascript'></script>
 		<script src='hp3d.js' type='text/javascript'></script>
-		<div id="rates" style='position:absolute;'></div>
 		<div id="cont">
 			<div id="hello"></div>
 		</div>
@@ -63,6 +49,13 @@
 				  faces[i].style.border="0.5px solid #000";
 				  faces[i].style.background="aqua";
 				  faces[i].style.opacity="0.6";
+				}
+				hxgn.style.webkitAnimation="rot 20s linear infinite";
+				hxgn.onmouseover=function(){
+					hxgn.style.webkitAnimation="none";
+				}
+				hxgn.onmouseout=function(){
+					hxgn.style.webkitAnimation="rot 20s linear infinite";
 				}
 			};
 			alert("The mouse control on this page is not the part of the library.\n Its just an example use of library.")
